# noxel-rust-backend

./: .gitignore  Cargo.toml  Dockerfile  README.md  docker-compose.yml
migrations/: 0001_init.sql  0002_users_add_fields.sql  0003_users_gov_identification.sql  0004_users_gov_identification_bigint.sql  0005_role_data_tables.sql  0006_users_password_hash.sql  0007_users_password_not_null.sql  0008_user_address.sql  0009_events.sql  0010_event_images.sql  0011_events_address_and_time_not_null.sql  0012_events_search_gin.sql  0013_tickets.sql  0014_ticket_lots.sql  0015_tickets_lot_fk_and_guard.sql
src/: cors.rs  error.rs  main.rs  results.rs  routes.rs
src/apps/: mod.rs
src/apps/tickets/: dto.rs  handlers.rs  mod.rs  models.rs  requests.rs  routes.rs  sql.rs
src/apps/users/: dto.rs  handlers.rs  mod.rs  models.rs  requests.rs  routes.rs  sql.rs
src/middleware/: auth.rs  jwt.rs
