[package]
name = "noxel-rust-backend"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.7", features = ["macros"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
thiserror = "1"

# DB
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "postgres", "macros", "uuid", "chrono"] }

# OpenAPI
utoipa = { version = "4", features = ["axum_extras", "chrono", "uuid"] }
utoipa-swagger-ui = { version = "7", features = ["axum"] }

uuid = { version = "1", features = ["serde", "v4"] }
chrono = { version = "0.4", features = ["serde"] }
jsonwebtoken = { version = "10.3.0", features = ["rust_crypto"] }
anyhow = "1.0.100"

# Password hashing
argon2 = "0.5"
dotenv = "0.15.0"
tower-http = { version = "0.6", features = ["cors"] }

[profile.release]
strip = true
lto = true
codegen-units = 1
